basic implementation of extensible admin menu via KnpMenuBundle
- new menu is displayed above the current one with limited styling
- menu is extensible using events
- routing extension was customized to cover our needs

--- a/packages/framework/easy-coding-standard.yml
+++ b/packages/framework/easy-coding-standard.yml
@@ -6,6 +6,7 @@ parameters:
         ObjectCalisthenics\Sniffs\Files\FunctionLengthSniff:
             - '*/src/DataFixtures/*/*DataFixture.php'
             - '*/src/Form/Admin/*/*FormType.php'
+            - '*/src/Model/AdminNavigation/MenuBuilder.php'
             - '*/src/Model/Order/Preview/OrderPreviewCalculation.php'
             - '*/src/Model/Product/ProductVisibilityRepository.php'
             - '*/src/Controller/Admin/AdministratorController.php'
