--- a/composer.json
+++ b/composer.json
@@ -140,7 +140,8 @@
     "tracy/tracy": "^2.4.13",
     "twig/extensions": "^1.5.1",
     "twig/twig": "^2.4.8",
-    "vasek-purchart/console-errors-bundle": "^1.0.1"
+    "vasek-purchart/console-errors-bundle": "^1.0.1",
+    "knplabs/knp-menu-bundle": "^2.2.1"
   },
   "require-dev": {
     "ext-pgsql": "*",
