--- a/packages/framework/composer.json
+++ b/packages/framework/composer.json
@@ -96,7 +96,8 @@
         "symfony-cmf/routing-bundle": "^2.0.3",
         "timwhitlock/jparser": "dev-get-rid-of-import#c37f4c6",
         "twig/extensions": "^1.5.1",
-        "twig/twig": "^2.4.8"
+        "twig/twig": "^2.4.8",
+        "knplabs/knp-menu-bundle": "^2.2.1"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.7",
