fixup! admin: breadcrumbs are resolved via KnpMenu

--- a/packages/framework/src/Resources/config/services.yml
+++ b/packages/framework/src/Resources/config/services.yml
@@ -103,7 +103,7 @@ services:
       - '%shopsys.admin_navigation.config_filepath%'
       - '@security.authorization_checker'
 
-  Shopsys\FrameworkBundle\Model\AdminNavigation\Breadcrumb: ~
+  Shopsys\FrameworkBundle\Model\AdminNavigation\BreadcrumbOverrider: ~
 
   Shopsys\FrameworkBundle\Component\Breadcrumb\BreadcrumbResolver:
     factory: ['@Shopsys\FrameworkBundle\Model\Breadcrumb\FrontBreadcrumbResolverFactory', create]
